# GameProgrammingInCpp

./: CMakeLists.txt
include/: BGSprite_component.h  actor.h  animsprite_component.h  component.h  data.h  game.h  image_manager.h  sprite_component.h
source/: BGSprite_component.cpp  actor.cpp  animsprite_component.cpp  component.cpp  game.cpp  image_manager.cpp  main.cpp  sprite_component.cpp
